<?xml version="1.0" encoding="utf-8"?><!-- This is the map where you collect coin items-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- map-->
    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="55.944"
        mapbox:mapbox_cameraTargetLng="-3.188396"
        mapbox:mapbox_cameraZoom="15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Displays timer in moving sac event-->
        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="gone" />
        <!-- Displays wallet content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/whiteTransparent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shilsac"
                android:src="@mipmap/shil" />

            <TextView
                android:id="@+id/shil_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dolrsac"
                android:src="@mipmap/dolr" />

            <TextView
                android:id="@+id/dolr_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/quidsac"
                android:src="@mipmap/quid" />

            <TextView
                android:id="@+id/quid_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/penysac"
                android:src="@mipmap/peny" />

            <TextView
                android:id="@+id/peny_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>