<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"><!-- bottom navigation items -->

    <item
        android:id="@+id/depot_tab"
        android:icon="@drawable/ic_account_balance"
        android:title="@string/depot" />
    <item
        android:id="@+id/map_tab"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />
    <item
        android:id="@+id/settings_tab"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"/>
</menu>