...
    <string name="app_name" tools:ignore="PrivateResource">Coinz</string><!-- this is the actual name of the app, so no problem here -->
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="depot">Depot</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="launchericon">launchericon</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="red_arrow_up">red arrow up</string>
...
